@@ -25,40 +25,53 @@ public class ElectionController {
         this.electionService = electionService;
     }
 
-    @PostMapping("/create")
+    @PostMapping("/add")
     public String submitElection(@RequestParam String title,
                                  @RequestParam String description,
                                  @RequestParam String startTime,
                                  @RequestParam String endTime,
                                  Model model) {
         try {
-            // Decode URL-encoded dates
-            String decodedStartTime = URLDecoder.decode(startTime, StandardCharsets.UTF_8);
-            String decodedEndTime = URLDecoder.decode(endTime, StandardCharsets.UTF_8);
+            // Decode URL-encoded dates (optional, only if required)
+            // String decodedStartTime = URLDecoder.decode(startTime, "UTF-8");
+            // String decodedEndTime = URLDecoder.decode(endTime, "UTF-8");
 
             // Convert decoded strings to Date objects
-            Date start = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm").parse(decodedStartTime);
-            Date end = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm").parse(decodedEndTime);
+            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm");
+            Date start = dateFormat.parse(startTime);  // Parsing the start time
+            Date end = dateFormat.parse(endTime);      // Parsing the end time
 
+            // Create ElectionDTO and populate it
             ElectionDTO electionDTO = new ElectionDTO();
             electionDTO.setTitle(title);
             electionDTO.setDescription(description);
             electionDTO.setStartTime(start);
             electionDTO.setEndTime(end);
 
-            // Map DTO to entity and save
+            // Map DTO to entity
             Election election = modelMapper.map(electionDTO, Election.class);
+
+            // Save election to the database
             electionService.createElection(election);
+
+            // Format the start and end time to display in the desired format
+            String formattedStartTime = new SimpleDateFormat("EEE dd/MM/yyyy HH:mm:ss").format(start);
+            String formattedEndTime = new SimpleDateFormat("EEE dd/MM/yyyy HH:mm:ss").format(end);
+
+            // Add formatted start and end time to the model for display
+            model.addAttribute("formattedStartTime", formattedStartTime);
+            model.addAttribute("formattedEndTime", formattedEndTime);
 
             model.addAttribute("message", "Election created successfully!");
             model.addAttribute("electionDTO", electionDTO);
+
             return "dashboard";
         } catch (Exception e) {
-            model.addAttribute("error", "Error: " + e.getMessage());
+            model.addAttribute("message", e.getMessage());
             return "election";
         }
     }
-    @GetMapping("/new")
+    @GetMapping("/create")
     public String showForm(Model model) {
         model.addAttribute("electionDTO", new ElectionDTO());
         return "election";
